deploy: 40a9e8c3c9f250bef1973bfe7374f80bc38d2481

--- a/lectures/07_c4.html
+++ b/lectures/07_c4.html
@@ -209,16 +209,16 @@ Architecture</a></p>
 <h2 id="system-context-example"><a class="header" href="#system-context-example">system context example</a></h2>
 <figure>
 <img src="figures/borrowed/c4/SystemContext.png" height="550"
-alt="from c4model.com | CC-BY" />
+alt="from c4model.com | CC-BY 4.0" />
 <figcaption aria-hidden="true">from <a
-href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+href="https://c4model.com/">c4model.com</a> | CC-BY 4.0</figcaption>
 </figure>
 <h2 id="notation"><a class="header" href="#notation">notation</a></h2>
 <figure>
 <img src="figures/borrowed/c4/SystemContext-key.png"
-alt="from c4model.com | CC-BY" />
+alt="from c4model.com | CC-BY 4.0" />
 <figcaption aria-hidden="true">from <a
-href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+href="https://c4model.com/">c4model.com</a> | CC-BY 4.0</figcaption>
 </figure>
 <h1 id="level-2-container-diagram"><a class="header" href="#level-2-container-diagram">Level 2: Container diagram</a></h1>
 <blockquote>
@@ -232,16 +232,16 @@ Architecture</a></p>
 <h2 id="container-example"><a class="header" href="#container-example">container example</a></h2>
 <figure>
 <img src="figures/borrowed/c4/Containers.png" height="550"
-alt="from c4model.com | CC-BY" />
+alt="from c4model.com | CC-BY 4.0" />
 <figcaption aria-hidden="true">from <a
-href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+href="https://c4model.com/">c4model.com</a> | CC-BY 4.0</figcaption>
 </figure>
 <h2 id="notation-1"><a class="header" href="#notation-1">notation</a></h2>
 <figure>
 <img src="figures/borrowed/c4/Containers-key.png"
-alt="from c4model.com | CC-BY" />
+alt="from c4model.com | CC-BY 4.0" />
 <figcaption aria-hidden="true">from <a
-href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+href="https://c4model.com/">c4model.com</a> | CC-BY 4.0</figcaption>
 </figure>
 <h1 id="level-3-component-diagram"><a class="header" href="#level-3-component-diagram">Level 3: Component diagram</a></h1>
 <blockquote>
@@ -254,16 +254,16 @@ Architecture</a></p>
 <h2 id="component-example"><a class="header" href="#component-example">component example</a></h2>
 <figure>
 <img src="figures/borrowed/c4/Components.png" height="550"
-alt="from c4model.com | CC-BY" />
+alt="from c4model.com | CC-BY 4.0" />
 <figcaption aria-hidden="true">from <a
-href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+href="https://c4model.com/">c4model.com</a> | CC-BY 4.0</figcaption>
 </figure>
 <h2 id="notation-2"><a class="header" href="#notation-2">notation</a></h2>
 <figure>
 <img src="figures/borrowed/c4/Components-key.png"
-alt="from c4model.com | CC-BY" />
+alt="from c4model.com | CC-BY 4.0" />
 <figcaption aria-hidden="true">from <a
-href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+href="https://c4model.com/">c4model.com</a> | CC-BY 4.0</figcaption>
 </figure>
 <h1 id="level-4-code"><a class="header" href="#level-4-code">Level 4: Code</a></h1>
 <blockquote>
@@ -274,10 +274,10 @@ Architecture</a></p>
 </blockquote>
 <h2 id="code-example"><a class="header" href="#code-example">code example</a></h2>
 <figure>
-<img src="figures/borrowed/c4/MainframeBankingSystemFacade.png"
-height="500" alt="from c4model.com | CC-BY" />
+<img src="figures/borrowed/c4/Code.png" height="500"
+alt="from c4model.com | CC-BY 4.0" />
 <figcaption aria-hidden="true">from <a
-href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+href="https://c4model.com/">c4model.com</a> | CC-BY 4.0</figcaption>
 </figure>
 <h1 id="additional-diagrams-in-c4-model"><a class="header" href="#additional-diagrams-in-c4-model">additional diagrams in C4 model</a></h1>
 <ul>
@@ -301,24 +301,24 @@ href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
 </ul>
 <h2 id="system-landscape-diagram"><a class="header" href="#system-landscape-diagram">system landscape diagram</a></h2>
 <figure>
-<img src="figures/borrowed/c4/SystemLandscape.png" height="550"
-alt="from c4model.com | CC-BY" />
+<img src="figures/borrowed/c4/SystemLandscape.png" width="750"
+alt="from c4model.com | CC-BY 4.0" />
 <figcaption aria-hidden="true">from <a
-href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+href="https://c4model.com/">c4model.com</a> | CC-BY 4.0</figcaption>
 </figure>
 <h2 id="dynamic-diagram-collaboration-style"><a class="header" href="#dynamic-diagram-collaboration-style">dynamic diagram (collaboration style)</a></h2>
 <figure>
-<img src="figures/borrowed/c4/SignIn.png" height="550"
-alt="from c4model.com | CC-BY" />
+<img src="figures/borrowed/c4/Dynamic-Collaboration.png"
+alt="from c4model.com | CC-BY 4.0" />
 <figcaption aria-hidden="true">from <a
-href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+href="https://c4model.com/">c4model.com</a> | CC-BY 4.0</figcaption>
 </figure>
 <h2 id="dynamic-diagram-sequence"><a class="header" href="#dynamic-diagram-sequence">dynamic diagram (sequence)</a></h2>
 <figure>
-<img src="figures/borrowed/c4/bigbankplc-SignIn-sequence.png"
-height="550" alt="from c4model.com | CC-BY" />
+<img src="figures/borrowed/c4/Dynamic-Sequence.png"
+alt="from c4model.com | CC-BY 4.0" />
 <figcaption aria-hidden="true">from <a
-href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+href="https://c4model.com/">c4model.com</a> | CC-BY 4.0</figcaption>
 </figure>
 <h2 id="deployment-diagram"><a class="header" href="#deployment-diagram">deployment diagram</a></h2>
 <div class="columns">
@@ -338,10 +338,10 @@ web/application server, Microsoft IIS), etc.</li>
 </div>
 <div class="column" width="60%">
 <figure>
-<img src="figures/borrowed/c4/LiveDeployment.png"
-alt="from c4model.com | CC-BY" />
+<img src="figures/borrowed/c4/Deployment-Development.png"
+alt="from c4model.com | CC-BY 4.0" />
 <figcaption aria-hidden="true">from <a
-href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+href="https://c4model.com/">c4model.com</a> | CC-BY 4.0</figcaption>
 </figure>
 </div>
 </div>
@@ -358,6 +358,13 @@ href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
 <ul>
 <li>it does not have a person shape though, but can be constucted from a
 circle and a rectange</li>
+</ul>
+</li>
+<li><a href="https://excalidraw.com/">Excalidraw</a>
+<ul>
+<li>has a
+<a href="https://libraries.excalidraw.com/?target=_excalidraw&amp;referrer=https%3A%2F%2Fexcalidraw.com%2F&amp;useHash=true&amp;token=t3GmI-WyZ2DeAX5-2XyOl&amp;theme=light&amp;version=2&amp;sort=default#dmitry-burnyshev-c4-architecture">plugin</a>
+for drawing C4</li>
 </ul>
 </li>
 <li>Visio</li>
