--- a/slides/07_c4.html
+++ b/slides/07_c4.html
@@ -116,18 +116,18 @@ Model for Software Architecture</a></p>
 <h2>system context example</h2>
 <figure>
 <img data-src="figures/borrowed/c4/SystemContext.png" height="550"
-alt="from c4model.com | CC-BY" />
+alt="from c4model.com | CC-BY 4.0" />
 <figcaption aria-hidden="true">from <a
-href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+href="https://c4model.com/">c4model.com</a> | CC-BY 4.0</figcaption>
 </figure>
 </section>
 <section id="notation" class="slide level2">
 <h2>notation</h2>
 <figure>
 <img data-src="figures/borrowed/c4/SystemContext-key.png"
-alt="from c4model.com | CC-BY" />
+alt="from c4model.com | CC-BY 4.0" />
 <figcaption aria-hidden="true">from <a
-href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+href="https://c4model.com/">c4model.com</a> | CC-BY 4.0</figcaption>
 </figure>
 </section></section>
 <section>
@@ -148,18 +148,18 @@ Model for Software Architecture</a></p>
 <h2>container example</h2>
 <figure>
 <img data-src="figures/borrowed/c4/Containers.png" height="550"
-alt="from c4model.com | CC-BY" />
+alt="from c4model.com | CC-BY 4.0" />
 <figcaption aria-hidden="true">from <a
-href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+href="https://c4model.com/">c4model.com</a> | CC-BY 4.0</figcaption>
 </figure>
 </section>
 <section id="notation-1" class="slide level2">
 <h2>notation</h2>
 <figure>
 <img data-src="figures/borrowed/c4/Containers-key.png"
-alt="from c4model.com | CC-BY" />
+alt="from c4model.com | CC-BY 4.0" />
 <figcaption aria-hidden="true">from <a
-href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+href="https://c4model.com/">c4model.com</a> | CC-BY 4.0</figcaption>
 </figure>
 </section></section>
 <section>
@@ -179,18 +179,18 @@ Model for Software Architecture</a></p>
 <h2>component example</h2>
 <figure>
 <img data-src="figures/borrowed/c4/Components.png" height="550"
-alt="from c4model.com | CC-BY" />
+alt="from c4model.com | CC-BY 4.0" />
 <figcaption aria-hidden="true">from <a
-href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+href="https://c4model.com/">c4model.com</a> | CC-BY 4.0</figcaption>
 </figure>
 </section>
 <section id="notation-2" class="slide level2">
 <h2>notation</h2>
 <figure>
 <img data-src="figures/borrowed/c4/Components-key.png"
-alt="from c4model.com | CC-BY" />
+alt="from c4model.com | CC-BY 4.0" />
 <figcaption aria-hidden="true">from <a
-href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+href="https://c4model.com/">c4model.com</a> | CC-BY 4.0</figcaption>
 </figure>
 </section></section>
 <section>
@@ -207,10 +207,10 @@ Model for Software Architecture</a></p>
 <section id="code-example" class="slide level2">
 <h2>code example</h2>
 <figure>
-<img data-src="figures/borrowed/c4/MainframeBankingSystemFacade.png"
-height="500" alt="from c4model.com | CC-BY" />
+<img data-src="figures/borrowed/c4/Code.png" height="500"
+alt="from c4model.com | CC-BY 4.0" />
 <figcaption aria-hidden="true">from <a
-href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+href="https://c4model.com/">c4model.com</a> | CC-BY 4.0</figcaption>
 </figure>
 </section></section>
 <section>
@@ -237,28 +237,28 @@ class="title-slide slide level1">
 <section id="system-landscape-diagram" class="slide level2">
 <h2>system landscape diagram</h2>
 <figure>
-<img data-src="figures/borrowed/c4/SystemLandscape.png" height="550"
-alt="from c4model.com | CC-BY" />
+<img data-src="figures/borrowed/c4/SystemLandscape.png" width="750"
+alt="from c4model.com | CC-BY 4.0" />
 <figcaption aria-hidden="true">from <a
-href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+href="https://c4model.com/">c4model.com</a> | CC-BY 4.0</figcaption>
 </figure>
 </section>
 <section id="dynamic-diagram-collaboration-style" class="slide level2">
 <h2>dynamic diagram (collaboration style)</h2>
 <figure>
-<img data-src="figures/borrowed/c4/SignIn.png" height="550"
-alt="from c4model.com | CC-BY" />
+<img data-src="figures/borrowed/c4/Dynamic-Collaboration.png"
+alt="from c4model.com | CC-BY 4.0" />
 <figcaption aria-hidden="true">from <a
-href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+href="https://c4model.com/">c4model.com</a> | CC-BY 4.0</figcaption>
 </figure>
 </section>
 <section id="dynamic-diagram-sequence" class="slide level2">
 <h2>dynamic diagram (sequence)</h2>
 <figure>
-<img data-src="figures/borrowed/c4/bigbankplc-SignIn-sequence.png"
-height="550" alt="from c4model.com | CC-BY" />
+<img data-src="figures/borrowed/c4/Dynamic-Sequence.png"
+alt="from c4model.com | CC-BY 4.0" />
 <figcaption aria-hidden="true">from <a
-href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+href="https://c4model.com/">c4model.com</a> | CC-BY 4.0</figcaption>
 </figure>
 </section>
 <section id="deployment-diagram" class="slide level2">
@@ -278,10 +278,10 @@ web/application server, Microsoft IIS), etc.</li>
 </ul>
 </div><div class="column" style="width:60%;">
 <figure>
-<img data-src="figures/borrowed/c4/LiveDeployment.png"
-alt="from c4model.com | CC-BY" />
+<img data-src="figures/borrowed/c4/Deployment-Development.png"
+alt="from c4model.com | CC-BY 4.0" />
 <figcaption aria-hidden="true">from <a
-href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+href="https://c4model.com/">c4model.com</a> | CC-BY 4.0</figcaption>
 </figure>
 </div>
 </div>
@@ -303,6 +303,12 @@ href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
 <ul>
 <li>it does not have a person shape though, but can be constucted from a
 circle and a rectange</li>
+</ul></li>
+<li><a href="https://excalidraw.com/">Excalidraw</a>
+<ul>
+<li>has a <a
+href="https://libraries.excalidraw.com/?target=_excalidraw&amp;referrer=https%3A%2F%2Fexcalidraw.com%2F&amp;useHash=true&amp;token=t3GmI-WyZ2DeAX5-2XyOl&amp;theme=light&amp;version=2&amp;sort=default#dmitry-burnyshev-c4-architecture">plugin</a>
+for drawing C4</li>
 </ul></li>
 <li>Visio</li>
 </ul>
