deploy: d40e297389ed155b6660d2f6074e647a21c3bcb1

--- a/print.html
+++ b/print.html
@@ -5938,6 +5938,16 @@ hexagon</li>
 <div class="text-smaller">
 <p>based on (Woltmann, 2023)</p>
 </div>
+<h2 id="the-clean-architecture"><a class="header" href="#the-clean-architecture">the clean architecture</a></h2>
+<p><img src="lectures/figures/clean_architecture.drawio.svg" alt="" /></p>
+<div class="text-smaller">
+<ul>
+<li>by Robert C. Martin (Martin, 2012), unifies onion or hexagonal, etc.</li>
+<li>source code dependencies can only point inwards</li>
+<li>relies on dependency inversion principle</li>
+<li>the number of circles is flexible</li>
+</ul>
+</div>
 <h1 id="model-view-controller-wikipedia-contributors-2024b"><a class="header" href="#model-view-controller-wikipedia-contributors-2024b">Model-View-Controller (Wikipedia contributors, 2024b)</a></h1>
 <div class="columns">
 <div class="column" width="55%">
