--- a/slides/08_patterns.html
+++ b/slides/08_patterns.html
@@ -992,6 +992,20 @@ class="citation" data-cites="martin2012clean">[20]</span>)</p>
 <p>based on <span class="citation"
 data-cites="woltmann2023hexagonal">[14]</span></p>
 </div>
+</section>
+<section id="the-clean-architecture" class="slide level2">
+<h2>the clean architecture</h2>
+<p><img data-src="figures/clean_architecture.drawio.svg" /></p>
+<div class="text-smaller">
+<ul>
+<li>by Robert C. Martin <span class="citation"
+data-cites="martin2012clean">[20]</span>, unifies onion or hexagonal,
+etc.</li>
+<li>source code dependencies can only point inwards</li>
+<li>relies on dependency inversion principle</li>
+<li>the number of circles is flexible</li>
+</ul>
+</div>
 </section></section>
 <section>
 <section id="model-view-controller-enwiki1244967192"
