--- a/lectures/HOME.html
+++ b/lectures/HOME.html
@@ -373,6 +373,9 @@ by Dan Radigan</li>
 Estimates</a></li>
 <li><a href="https://stackoverflow.com/help/minimal-reproducible-example">How to create a Minimal, Reproducible
 Example</a></li>
+<li><a href="https://medium.com/@jorisvdaalsvoort/walking-skeletons-in-software-architecture-894168276e3f">Walking Skeletons in Software
+Architecture</a> -
+by Joris van der Aalsvoort</li>
 </ul>
 <h2 id="week-7"><a class="header" href="#week-7">week 7</a></h2>
 <ol>
