deploy: f06379bd53543bd9b7c08bccb037f90c9261e1c5

--- a/index.html
+++ b/index.html
@@ -376,6 +376,8 @@ Example</a></li>
 <li><a href="https://medium.com/@jorisvdaalsvoort/walking-skeletons-in-software-architecture-894168276e3f">Walking Skeletons in Software
 Architecture</a> -
 by Joris van der Aalsvoort</li>
+<li><a href="https://effectiviology.com/brooks-law/">Brooks’ Law: Adding Manpower to a Late Project Makes It
+Later</a> - by Itamar Shatz</li>
 </ul>
 <h2 id="week-7"><a class="header" href="#week-7">week 7</a></h2>
 <ol>
