--- a/print.html
+++ b/print.html
@@ -377,6 +377,8 @@ Example</a></li>
 <li><a href="https://medium.com/@jorisvdaalsvoort/walking-skeletons-in-software-architecture-894168276e3f">Walking Skeletons in Software
 Architecture</a> -
 by Joris van der Aalsvoort</li>
+<li><a href="https://effectiviology.com/brooks-law/">Brooks’ Law: Adding Manpower to a Late Project Makes It
+Later</a> - by Itamar Shatz</li>
 </ul>
 <h2 id="week-7"><a class="header" href="#week-7">week 7</a></h2>
 <ol>
@@ -7535,6 +7537,21 @@ aspect.</p>
 </div>
 <!-- ## what can be done? -->
 <!-- Brooks' law says that it is impossible to measure useful work in man-months. -->
+<h2 id="brooks-law-vs-torvalds-law"><a class="header" href="#brooks-law-vs-torvalds-law">Brooks’ law vs Torvalds’ law</a></h2>
+<blockquote>
+<p>Adding manpower to a late software project makes it later.</p>
+<p>– Fred Brooks (1975)</p>
+</blockquote>
+<blockquote>
+<p>Given enough eyeballs, all bugs are shallow.</p>
+<p>– Linus Torvalds (1999)</p>
+</blockquote>
+<div class="fragment">
+<ul>
+<li>if you have many users (testers), they will find the bugs</li>
+<li>if you have many developers, someone will understand and fix the bugs</li>
+</ul>
+</div>
 <h1 id="references-8"><a class="header" href="#references-8">references</a></h1>
 <div id="refs" class="references csl-bib-body hanging-indent"
 line-spacing="2">
