--- a/slides/10_planning.html
+++ b/slides/10_planning.html
@@ -828,6 +828,24 @@ aspect.</p>
 </aside>
 <!-- ## what can be done? -->
 <!-- Brooks' law says that it is impossible to measure useful work in man-months. -->
+</section>
+<section id="brooks-law-vs-torvalds-law" class="slide level2">
+<h2>Brooks’ law vs Torvalds’ law</h2>
+<blockquote>
+<p>Adding manpower to a late software project makes it later.</p>
+<p>– Fred Brooks (1975)</p>
+</blockquote>
+<blockquote>
+<p>Given enough eyeballs, all bugs are shallow.</p>
+<p>– Linus Torvalds (1999)</p>
+</blockquote>
+<div class="fragment">
+<ul>
+<li>if you have many users (testers), they will find the bugs</li>
+<li>if you have many developers, someone will understand and fix the
+bugs</li>
+</ul>
+</div>
 </section></section>
 <section id="references" class="title-slide slide level1">
 <h1>references</h1>
