--- a/lectures/10_planning.html
+++ b/lectures/10_planning.html
@@ -863,6 +863,21 @@ aspect.</p>
 </div>
 <!-- ## what can be done? -->
 <!-- Brooks' law says that it is impossible to measure useful work in man-months. -->
+<h2 id="brooks-law-vs-torvalds-law"><a class="header" href="#brooks-law-vs-torvalds-law">Brooks’ law vs Torvalds’ law</a></h2>
+<blockquote>
+<p>Adding manpower to a late software project makes it later.</p>
+<p>– Fred Brooks (1975)</p>
+</blockquote>
+<blockquote>
+<p>Given enough eyeballs, all bugs are shallow.</p>
+<p>– Linus Torvalds (1999)</p>
+</blockquote>
+<div class="fragment">
+<ul>
+<li>if you have many users (testers), they will find the bugs</li>
+<li>if you have many developers, someone will understand and fix the bugs</li>
+</ul>
+</div>
 <h1 id="references"><a class="header" href="#references">references</a></h1>
 <div id="refs" class="references csl-bib-body hanging-indent"
 line-spacing="2">
