deploy: 8c3ccfb1042a6671d4ca1c00d058d9343239ce25

--- a/lectures/11_wireframing.html
+++ b/lectures/11_wireframing.html
@@ -206,7 +206,8 @@ width="275" /></p>
 <h2 id="design-prototyping"><a class="header" href="#design-prototyping">design prototyping</a></h2>
 <figure>
 <img src="figures/borrowed/td-design-thinking-non-linear-process.webp"
-height="475"
+data-preview-image="figures/borrowed/td-design-thinking-non-linear-process.webp"
+data-preview-fit="contain" height="450"
 alt="Interaction Design Foundation (Interaction Design Foundation, 2019) | CC BY-SA 4.0" />
 <figcaption aria-hidden="true">Interaction Design Foundation <span
 class="citation" data-cites="ixdf2019what">(Interaction Design
@@ -244,7 +245,7 @@ alt="high-fidelity" />
 <ul>
 <li>first sketch</li>
 <li>simple</li>
-<li>rough visual representations of a webpage or application</li>
+<li>rough visual representations of a webpage<br>or application</li>
 <li>don’t consider scale or pixel accuracy</li>
 <li>don’t include actual content, typography, colors
 <ul>
@@ -260,17 +261,17 @@ alt="high-fidelity" />
 </div>
 <div class="column" width="30%">
 <p><img src="figures/user_statistics/wireframe_lofi.drawio.svg"
-width="250" /></p>
+width="300" /></p>
 </div>
 </div>
 <h2 id="mid-fidelity-wireframe"><a class="header" href="#mid-fidelity-wireframe">mid-fidelity wireframe</a></h2>
 <div class="columns">
-<div class="column mt-2" width="70">
+<div class="column mt-2" width="60">
 <ul>
 <li>provides more precise representations of the layout</li>
 <li>for exploring design ideas, establishing spacing and buttons, and user
 flow</li>
-<li>still don’t include images, typography or detailed content
+<li>still don’t include images, typography<br>or detailed content
 <ul>
 <li>but show more details regarding components and features</li>
 </ul>
@@ -282,17 +283,13 @@ flow</li>
 <p>source: (Bruton, 2022)</p>
 </div>
 </div>
-<div class="column" width="30%">
-<figure>
-<img src="figures/user_stats.drawio.svg" width="250"
-alt="mid-fidelity" />
-<figcaption aria-hidden="true">mid-fidelity</figcaption>
-</figure>
+<div class="column" width="40%">
+<img src="figures/user_stats.drawio.svg" width="300" />
 </div>
 </div>
 <h2 id="hi-fidelity-wireframe"><a class="header" href="#hi-fidelity-wireframe">hi-fidelity wireframe</a></h2>
 <div class="columns">
-<div class="column mt-2" width="70">
+<div class="column mt-2" width="60">
 <ul>
 <li>exploring complex concepts, finalising design</li>
 <li>provides pixel-specific layouts</li>
@@ -310,21 +307,35 @@ and menu systems</li>
 <p>source: (Bruton, 2022)</p>
 </div>
 </div>
-<div class="column" width="30%">
-<figure>
-<img src="figures/user_statistics/wireframe_hifi.drawio.svg" width="250"
-alt="high-fidelity" />
-<figcaption aria-hidden="true">high-fidelity</figcaption>
-</figure>
+<div class="column" width="40%">
+<p><img src="figures/user_statistics/wireframe_hifi.drawio.svg"
+width="300" /></p>
 </div>
 </div>
-<!-- ## prototype -->
 <h1 id="wireframe-map"><a class="header" href="#wireframe-map">wireframe map</a></h1>
 <p><img src="figures/user_statistics/wireframe_map_2.drawio.svg"
 height="500" /></p>
 <div class="text-smaller">
 <p>shows user flow, ~ user story map flow</p>
 </div>
+<h2 id="prototype"><a class="header" href="#prototype">prototype</a></h2>
+<ul>
+<li>prototypes allow to experience interactions</li>
+<li>clickable, imitates the behaviour</li>
+<li>construction is similar to the wireframe map
+<ul>
+<li>screens are linked by flow,</li>
+<li>the actual UI elements triggers the change</li>
+</ul>
+</li>
+<li>low–high fidelity could work
+<ul>
+<li>mostly high, though</li>
+<li><a href="https://www.youtube.com/watch?v=yafaGNFu8Eg">Low fidelity prototype testing of the EE
+app</a> [YT]</li>
+</ul>
+</li>
+</ul>
 <h1 id="sitemap"><a class="header" href="#sitemap">sitemap</a></h1>
 <div class="columns">
 <div class="column" width="25">
@@ -340,15 +351,25 @@ height="500" /></p>
 </ul>
 </div>
 <div class="column" width="75%">
-<img src="figures/sitemap_wbs.svg" width="600" />
+<p><img src="figures/sitemap_wbs.svg"
+data-preview-image="figures/sitemap_wbs.svg" data-preview-fit="contain"
+width="600" /></p>
 </div>
 </div>
 <h2 id="sitemap-as-wireframe-map"><a class="header" href="#sitemap-as-wireframe-map">sitemap as wireframe map</a></h2>
 <img src="figures/sitemap_wireframe.drawio.svg" height="550" />
 <h1 id="some-free-tools"><a class="header" href="#some-free-tools">some free tools</a></h1>
 <ul>
-<li><a href="https://docs.google.com/drawings">Google Drawings</a></li>
+<li><a href="https://excalidraw.com/">Excalidraw</a>
+<ul>
+<li><a href="https://libraries.excalidraw.com/?theme=light&amp;sort=default#gabrielamacakova-basic-ux-wireframing-elements">Basic UX/wireframing
+elements</a></li>
+<li><a href="https://libraries.excalidraw.com/?theme=light&amp;sort=default#spfr-lo-fi-wireframing-kit">Lo-Fi Wireframing
+Kit</a></li>
+</ul>
+</li>
 <li><a href="https://app.diagrams.net/">draw.io</a></li>
+<li><a href="https://docs.google.com/drawings">Google Drawings</a></li>
 <li><a href="https://quant-ux.com/">Quant-UX</a>
 <ul>
 <li>open source (self-hosted) or free as a service</li>
