--- a/slides/11_wireframing.html
+++ b/slides/11_wireframing.html
@@ -129,7 +129,9 @@ data-cites="bruton2022what">[1]</span></p>
 <figure>
 <img
 data-src="figures/borrowed/td-design-thinking-non-linear-process.webp"
-height="475" alt="Interaction Design Foundation [2] | CC BY-SA 4.0" />
+data-preview-image="figures/borrowed/td-design-thinking-non-linear-process.webp"
+data-preview-fit="contain" height="450"
+alt="Interaction Design Foundation [2] | CC BY-SA 4.0" />
 <figcaption aria-hidden="true">Interaction Design Foundation <span
 class="citation" data-cites="ixdf2019what">[2]</span> | <a
 href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA
@@ -168,7 +170,7 @@ width="250" alt="high-fidelity" />
 <ul>
 <li>first sketch</li>
 <li>simple</li>
-<li>rough visual representations of a webpage or application</li>
+<li>rough visual representations of a webpage<br>or application</li>
 <li>don’t consider scale or pixel accuracy</li>
 <li>don’t include actual content, typography, colors
 <ul>
@@ -183,19 +185,19 @@ data-cites="bruton2022what">[1]</span></p>
 </div>
 </div><div class="column" style="width:30%;">
 <p><img data-src="figures/user_statistics/wireframe_lofi.drawio.svg"
-width="250" /></p>
+width="300" /></p>
 </div>
 </div>
 </section>
 <section id="mid-fidelity-wireframe" class="slide level2">
 <h2>mid-fidelity wireframe</h2>
 <div class="columns">
-<div class="column mt-2" style="width:70;">
+<div class="column mt-2" style="width:60;">
 <ul>
 <li>provides more precise representations of the layout</li>
 <li>for exploring design ideas, establishing spacing and buttons, and
 user flow</li>
-<li>still don’t include images, typography or detailed content
+<li>still don’t include images, typography<br>or detailed content
 <ul>
 <li>but show more details regarding components and features</li>
 </ul></li>
@@ -206,19 +208,15 @@ user flow</li>
 <p>source: <span class="citation"
 data-cites="bruton2022what">[1]</span></p>
 </div>
-</div><div class="column" style="width:30%;">
-<figure>
-<img data-src="figures/user_stats.drawio.svg" width="250"
-alt="mid-fidelity" />
-<figcaption aria-hidden="true">mid-fidelity</figcaption>
-</figure>
+</div><div class="column" style="width:40%;">
+<p><img data-src="figures/user_stats.drawio.svg" width="300" /></p>
 </div>
 </div>
 </section>
 <section id="hi-fidelity-wireframe" class="slide level2">
 <h2>hi-fidelity wireframe</h2>
 <div class="columns">
-<div class="column mt-2" style="width:70;">
+<div class="column mt-2" style="width:60;">
 <ul>
 <li>exploring complex concepts, finalising design</li>
 <li>provides pixel-specific layouts</li>
@@ -235,16 +233,13 @@ alt="mid-fidelity" />
 <p>source: <span class="citation"
 data-cites="bruton2022what">[1]</span></p>
 </div>
-</div><div class="column" style="width:30%;">
-<figure>
-<img data-src="figures/user_statistics/wireframe_hifi.drawio.svg"
-width="250" alt="high-fidelity" />
-<figcaption aria-hidden="true">high-fidelity</figcaption>
-</figure>
+</div><div class="column" style="width:40%;">
+<p><img data-src="figures/user_statistics/wireframe_hifi.drawio.svg"
+width="300" /></p>
 </div>
 </div>
-<!-- ## prototype -->
 </section></section>
+<section>
 <section id="wireframe-map" class="title-slide slide level1">
 <h1>wireframe map</h1>
 <p><img data-src="figures/user_statistics/wireframe_map_2.drawio.svg"
@@ -253,7 +248,24 @@ height="500" /></p>
 <p>shows user flow, ~ user story map flow</p>
 </div>
 </section>
-
+<section id="prototype" class="slide level2">
+<h2>prototype</h2>
+<ul>
+<li>prototypes allow to experience interactions</li>
+<li>clickable, imitates the behaviour</li>
+<li>construction is similar to the wireframe map
+<ul>
+<li>screens are linked by flow,</li>
+<li>the actual UI elements triggers the change</li>
+</ul></li>
+<li>low–high fidelity could work
+<ul>
+<li>mostly high, though</li>
+<li><a href="https://www.youtube.com/watch?v=yafaGNFu8Eg">Low fidelity
+prototype testing of the EE app</a> [YT]</li>
+</ul></li>
+</ul>
+</section></section>
 <section>
 <section id="sitemap" class="title-slide slide level1">
 <h1>sitemap</h1>
@@ -269,7 +281,9 @@ height="500" /></p>
 </ul></li>
 </ul>
 </div><div class="column" style="width:75%;">
-<p><img data-src="figures/sitemap_wbs.svg" width="600" /></p>
+<p><img data-src="figures/sitemap_wbs.svg"
+data-preview-image="figures/sitemap_wbs.svg" data-preview-fit="contain"
+width="600" /></p>
 </div>
 </div>
 </section>
@@ -281,8 +295,17 @@ height="550" /></p>
 <section id="some-free-tools" class="title-slide slide level1">
 <h1>some free tools</h1>
 <ul>
-<li><a href="https://docs.google.com/drawings">Google Drawings</a></li>
+<li><a href="https://excalidraw.com/">Excalidraw</a>
+<ul>
+<li><a
+href="https://libraries.excalidraw.com/?theme=light&amp;sort=default#gabrielamacakova-basic-ux-wireframing-elements">Basic
+UX/wireframing elements</a></li>
+<li><a
+href="https://libraries.excalidraw.com/?theme=light&amp;sort=default#spfr-lo-fi-wireframing-kit">Lo-Fi
+Wireframing Kit</a></li>
+</ul></li>
 <li><a href="https://app.diagrams.net/">draw.io</a></li>
+<li><a href="https://docs.google.com/drawings">Google Drawings</a></li>
 <li><a href="https://quant-ux.com/">Quant-UX</a>
 <ul>
 <li>open source (self-hosted) or free as a service</li>
